packages/parser/test/tokenizer/E0009-hexadecimal-eof.txt
0x
===== err =====
anonymous:1:1: SyntaxError: E0009 - Invalid hexadecimal integer literal
1 | 0x
  | ~~
